--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -11,4 +11,8 @@
 </p>
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+<%= link_to 'Back', posts_path %> | 
+<%= link_to 'Delete',
+              post_path(@post),
+              method: :delete,
+              data:    { confirm: 'Are you sure?' } %></td>
